@@ -7,8 +7,8 @@
     <artifactId>jhoper-user</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
-        <module>jhoper-api</module>
-        <module>jhoper-web</module>
+        <module>jhoper-user-api</module>
+        <module>jhoper-user-web</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -18,14 +18,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.1.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <java.version>12</java.version>
         <spring-cloud.version>Greenwich.RC2</spring-cloud.version>
     </properties>
 
@@ -55,6 +55,26 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>12</release>
+                    <compilerArgs>
+                        <arg>-J--add-opens=java.base/jdk.internal.misc=test</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
